--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ edition = "2021"
 
 [workspace.dependencies]
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_stacker = "0.1"
+serde_json = { version = "1.0", features = ["unbounded_depth"] }
 regress = "0.7"
 chrono = { version = "0.4", features = ["serde"] }
 
