--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 serde = { workspace = true }
+serde_stacker = { workspace = true }
 serde_json = { workspace = true }
 regress = { workspace = true }
 chrono = { workspace = true }
