--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -12,3 +12,7 @@ serde_json = { workspace = true }
 regress = { workspace = true }
 chrono = { workspace = true }
 types-elm-v3 = { path = "../types-elm-v3" }
+env_logger = "0.11.3"
+
+[dev-dependencies]
+ctor = "0.2.8"
