--- a/crates/types-common/Cargo.toml
+++ b/crates/types-common/Cargo.toml
@@ -11,3 +11,4 @@ serde_stacker = { workspace = true }
 serde_json = { workspace = true }
 regress = { workspace = true }
 chrono = { workspace = true }
+macro-derive = { path = "../macro-derive" }
