--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ serde_stacker = "0.1"
 serde_json = { version = "1.0", features = ["unbounded_depth"] }
 regress = "0.7"
 chrono = { version = "0.4", features = ["serde"] }
+env_logger = "0.11.3"
+log = "0.4"
 
 [dependencies]
 types-elm-v3 = { path = "crates/types-elm-v3" }
