--- a/crates/macro-derive/Cargo.toml
+++ b/crates/macro-derive/Cargo.toml
@@ -3,7 +3,10 @@ name = "macro-derive"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+proc-macro = true
+
 [dependencies]
-serde = { workspace = true }
-serde_json = { workspace = true }
-types_common = { path = "../types-common" }
+syn = "2.0"
+quote = "1.0"
+proc-macro2 = "1.0.81"
