--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -12,8 +12,8 @@ serde_json = { workspace = true }
 regress = { workspace = true }
 chrono = { workspace = true }
 types-elm-v3 = { path = "../types-elm-v3" }
-env_logger = "0.11.3"
-log = "0.4"
+env_logger = { workspace = true }
+log = { workspace = true }
 
 [dev-dependencies]
 ctor = "0.2.8"
