--- a/crates/types-ob-v3/Cargo.toml
+++ b/crates/types-ob-v3/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 [dependencies]
 serde = { workspace = true }
 serde_json = { workspace = true }
-regress = { workspace = true }
+regex = { workspace = true }
 chrono = { workspace = true }
 types-common = { path = "../types-common" }
