--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 serde = { workspace = true }
 serde_stacker = { workspace = true }
 serde_json = { workspace = true }
-regress = { workspace = true }
+regex = { workspace = true }
 chrono = { workspace = true }
 types-elm-v3 = { path = "../types-elm-v3" }
 env_logger = { workspace = true }
