--- a/crates/types-common/Cargo.toml
+++ b/crates/types-common/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 serde = { workspace = true }
 serde_stacker = { workspace = true }
 serde_json = { workspace = true }
-regress = { workspace = true }
+regex = { workspace = true }
 chrono = { workspace = true }
 macro-derive = { path = "../macro-derive" }
+time = { version = "0.3", features = ["serde", "macros", "parsing"] }
