--- a/crates/types-elm-v3/Cargo.toml
+++ b/crates/types-elm-v3/Cargo.toml
@@ -10,5 +10,6 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 regex = { workspace = true }
 chrono = { workspace = true }
+http = { workspace = true }
 types-common = { path = "../types-common" }
 time = { version = "0.3.36", features = ["serde", "macros", "parsing"] }
