--- a/crates/types-common/Cargo.toml
+++ b/crates/types-common/Cargo.toml
@@ -12,4 +12,4 @@ serde_json = { workspace = true }
 regex = { workspace = true }
 chrono = { workspace = true }
 macro-derive = { path = "../macro-derive" }
-time = { version = "0.3", features = ["serde", "macros", "parsing"] }
+iso8601-duration = "0.2.0"
