feat: a macro for correct deserialization of enums. (#6)
* Use macro for enums
* Add some documentation
* Add tagtype everywhere
* Remove redundant stringtype
* Also validate shacl after serializing
* Fix init-py.sh
* Update readme
* Add tag function on struct
* Remove redundant DateTimeType
* Remove redundant float
* Implement positive zero
* Implement regex crate
* Change genericId to UriType
* Update deserialize objectorvector
* Fix duration for elm
* Clean up some code
* Extra constraints LangKV + LangKvPairs
* Remove redundant integerType
* OneOrMany instead of ObjectOrVector
* Update tests
* Apply last changes of schema
* Remove comments in cargo.toml
* Implement clippy fixes
* Improve email structs
Fix #7

--- a/crates/types-common/Cargo.toml
+++ b/crates/types-common/Cargo.toml
@@ -3,11 +3,12 @@ name = "types-common"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 serde = { workspace = true }
 serde_stacker = { workspace = true }
 serde_json = { workspace = true }
-regress = { workspace = true }
+regex = { workspace = true }
 chrono = { workspace = true }
+macro-derive = { path = "../macro-derive" }
+iso8601-duration = "0.2.0"
+email_address = "0.2.4"
