--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -3,17 +3,15 @@ name = "validator"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 serde = { workspace = true }
 serde_stacker = { workspace = true }
 serde_json = { workspace = true }
-regress = { workspace = true }
+regex = { workspace = true }
 chrono = { workspace = true }
 types-elm-v3 = { path = "../types-elm-v3" }
-env_logger = "0.11.3"
-log = "0.4"
+env_logger = { workspace = true }
+log = { workspace = true }
 
 [dev-dependencies]
 ctor = "0.2.8"
