--- a/crates/macro-derive/Cargo.toml
+++ b/crates/macro-derive/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-syn = "2.0"
-quote = "1.0"
-proc-macro2 = "1.0.81"
+syn = "2"
+quote = "1"
+proc-macro2 = "1"
+convert_case = "0.6"
